@@ -58,7 +58,6 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -229,7 +228,7 @@ public class ConnectWorkerIntegrationTest {
         // Restart the failed task
         String taskRestartEndpoint = connect.endpointForResource(
             String.format("connectors/%s/tasks/0/restart", CONNECTOR_NAME));
-        connect.requestPost(taskRestartEndpoint, "", Collections.emptyMap());
+        connect.requestPost(taskRestartEndpoint, "", Map.of());
 
         // Ensure the task started successfully this time
         connect.assertions().assertConnectorAndAtLeastNumTasksAreRunning(CONNECTOR_NAME, numTasks,
@@ -374,7 +373,7 @@ public class ConnectWorkerIntegrationTest {
             NUM_TASKS, "Connector tasks did not start in time");
         connector.awaitRecords(TimeUnit.MINUTES.toMillis(1));
 
-        // Then if we delete the connector, it and each of its tasks should be stopped by the framework
+        // Then, if we delete the connector, it and each of its tasks should be stopped by the framework
         // even though the producer is blocked because there is no topic
         StartAndStopLatch stopCounter = connector.expectedStops(1);
         connect.deleteConnector(CONNECTOR_NAME);
@@ -434,8 +433,8 @@ public class ConnectWorkerIntegrationTest {
                 "Connector did not stop in time"
         );
         // If the connector is truly stopped, we should also see an empty set of tasks and task configs
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Transition to RUNNING
         connect.resumeConnector(CONNECTOR_NAME);
@@ -463,8 +462,8 @@ public class ConnectWorkerIntegrationTest {
                 CONNECTOR_NAME,
                 "Connector did not stop in time"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Transition to PAUSED
         connect.pauseConnector(CONNECTOR_NAME);
@@ -520,8 +519,8 @@ public class ConnectWorkerIntegrationTest {
                 "Connector did not stop in time"
         );
         // If the connector is truly stopped, we should also see an empty set of tasks and task configs
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Can resume a connector after its Connector has failed before shutdown after receiving a stop request
         props.remove("connector.start.inject.error");
@@ -542,8 +541,8 @@ public class ConnectWorkerIntegrationTest {
                 CONNECTOR_NAME,
                 "Connector did not stop in time"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Can resume a connector after its Connector has failed during shutdown after receiving a stop request
         connect.resumeConnector(CONNECTOR_NAME);
@@ -580,8 +579,8 @@ public class ConnectWorkerIntegrationTest {
             0,
             "Connector was not created in a paused state"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Verify that a connector created in the PAUSED state can be resumed successfully
         connect.resumeConnector(CONNECTOR_NAME);
@@ -615,16 +614,16 @@ public class ConnectWorkerIntegrationTest {
             CONNECTOR_NAME,
             "Connector was not created in a stopped state"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Verify that the offsets can be modified for a source connector created in the STOPPED state
 
         // Alter the offsets so that only 5 messages are produced
         connect.alterSourceConnectorOffset(
             CONNECTOR_NAME,
-            Collections.singletonMap("task.id", CONNECTOR_NAME + "-0"),
-            Collections.singletonMap("saved", 5L)
+            Map.of("task.id", CONNECTOR_NAME + "-0"),
+            Map.of("saved", 5L)
         );
 
         // Verify that a connector created in the STOPPED state can be resumed successfully
@@ -669,8 +668,8 @@ public class ConnectWorkerIntegrationTest {
             CONNECTOR_NAME,
             "Connector was not created in a stopped state"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Verify that the offsets can be modified for a sink connector created in the STOPPED state
 
@@ -726,8 +725,8 @@ public class ConnectWorkerIntegrationTest {
             0,
             "Connector was not created in a paused state"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Verify that a connector created in the PAUSED state can be deleted successfully
         connect.deleteConnector(CONNECTOR_NAME);
@@ -747,8 +746,8 @@ public class ConnectWorkerIntegrationTest {
             CONNECTOR_NAME,
             "Connector was not created in a stopped state"
         );
-        assertEquals(Collections.emptyList(), connect.connectorInfo(CONNECTOR_NAME).tasks());
-        assertEquals(Collections.emptyList(), connect.taskConfigs(CONNECTOR_NAME));
+        assertEquals(List.of(), connect.connectorInfo(CONNECTOR_NAME).tasks());
+        assertEquals(List.of(), connect.taskConfigs(CONNECTOR_NAME));
 
         // Verify that a connector created in the STOPPED state can be deleted successfully
         connect.deleteConnector(CONNECTOR_NAME);
@@ -1014,7 +1013,7 @@ public class ConnectWorkerIntegrationTest {
         // an existing set of task configs that was written before the cluster was upgraded
         try (JsonConverter converter = new JsonConverter()) {
             converter.configure(
-                    Collections.singletonMap(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "false"),
+                    Map.of(JsonConverterConfig.SCHEMAS_ENABLE_CONFIG, "false"),
                     false
             );
 
@@ -1326,7 +1325,7 @@ public class ConnectWorkerIntegrationTest {
                 "Connector did not start or task did not fail in time"
         );
         assertEquals(
-                new ConnectorOffsets(Collections.emptyList()),
+                new ConnectorOffsets(List.of()),
                 connect.connectorOffsets(CONNECTOR_NAME),
                 "Connector should not have any committed offsets when only task fails on first record"
         );
@@ -1346,9 +1345,9 @@ public class ConnectWorkerIntegrationTest {
         Map<String, Object> expectedOffsetKey = new HashMap<>();
         expectedOffsetKey.put(SinkUtils.KAFKA_TOPIC_KEY, topic);
         expectedOffsetKey.put(SinkUtils.KAFKA_PARTITION_KEY, 0);
-        Map<String, Object> expectedOffsetValue = Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, 1);
+        Map<String, Object> expectedOffsetValue = Map.of(SinkUtils.KAFKA_OFFSET_KEY, 1);
         ConnectorOffset expectedOffset = new ConnectorOffset(expectedOffsetKey, expectedOffsetValue);
-        ConnectorOffsets expectedOffsets = new ConnectorOffsets(Collections.singletonList(expectedOffset));
+        ConnectorOffsets expectedOffsets = new ConnectorOffsets(List.of(expectedOffset));
 
         // Wait for it to commit offsets, signaling that it has successfully processed the record we produced earlier
         waitForCondition(
@@ -1443,7 +1442,7 @@ public class ConnectWorkerIntegrationTest {
         @Override
         public List<Map<String, String>> taskConfigs(int maxTasks) {
             return IntStream.range(0, maxTasks)
-                    .mapToObj(i -> Collections.<String, String>emptyMap())
+                    .mapToObj(i -> Map.<String, String>of())
                     .collect(Collectors.toList());
         }
 
